--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recibo online</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         .container {
             margin-top: 20px;
+            margin: auto;
             width: 50%;
             border: 1px solid #918c8c;
             border-radius: 10px;
@@ -19,69 +24,128 @@
             margin-top: 30px;
         }
 
-        .cidade {
-            margin-bottom: 30px;
-        }
-
         .assinatura {
             border-top: 1px solid #000;
             text-align: center;
             margin-top: 30px;
         }
+
         .print {
             display: none;
         }
+
         @media print {
             .print {
                 display: block;
             }
+
             .container {
                 display: none;
             }
         }
+
+        .linha {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .linha2 {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .linha3 {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        input {
+            padding: 12px 20px;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+            box-sizing: border-box;
+        }
+
+        button {
+            width: 22%;
+            background-color: #29a029;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 14px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .coluna2 {
+            width: 40%;
+            float: left;
+            padding: 15px;
+        }
+
+        .coluna1 {
+            width: 40%;
+            float: left;
+            padding: 15px;
+        }
+
+        .coluna3 {
+            width: 40%;
+            float: left;
+            padding: 15px;
+        }
+
+        input.contratante {
+            width: 400px;
+            float: left;
+
+        }
     </style>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 </head>
 
 <body>
     <div class="container">
         <h2 class="titulo">Recibo de prestação de serviços</h2>
-        <div class="row">
-            <div class="col-sm">
+        <div class="linha">
+            <div class="coluna1">
                 <h4>Valor: </h4>
                 <input type="number" class="form-control" id="valor">
             </div>
-            <div class="col-sm">
+            <div class="coluna2">
                 <h4>Nº do recibo (opcional): </h4>
                 <input type="number" class="form-control" id="numero_recibo">
             </div>
-            <div class="col-sm">
+            <div class="coluna3">
                 <h4>Data:</h4>
                 <input type="date" class="form-control" id="data_recibo">
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
+        <div class="linha3">
+            <div class="coluna1">
                 <h4 class="titulo_contratante">Contratante:</h4>
-                <input type="text" class="form-control" id="contratante">
+                <input type="text" class="contratante" id="contratante">
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <h4 class="cpf">CPF ou CNPJ (opcional):</h4>
-                <input type="number" class="form-control" id="cpf_cnpj">
-            </div>
-            <div class="col-md-6">
-                <h4 class="referente">Referente à:</h4>
-                <input type="text" class="form-control" id="referente">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
+            <div class="coluna3">
                 <h4>Cidade:</h4>
                 <input type="text" class="form-control" id="cidade">
             </div>
+        </div>
+        <div class="linha2">
+            <div class="coluna1">
+                <h4 class="cpf">CPF ou CNPJ (opcional):</h4>
+                <input type="number" class="cpf" id="cpf_cnpj">
+            </div>
+            <div class="coluna2">
+                <h4 class="referente">Referente à:</h4>
+                <input type="text" class="form-control" id="referente">
+            </div>
+
         </div>
         <div class="row">
             <div class="col-md-6">
@@ -90,44 +154,44 @@
         </div>
     </div>
     <!-- Recibo para impressão -->
-    
-        <div class="print">
-            <div class="row">
-                <div class="col-md-12">
-                    <h1> Recibo de - <span class="" id="recebido_contratante"></span></h1>
-                </div>
+
+    <div class="print">
+        <div class="row">
+            <div class="col-md-12">
+                <h1> Recibo de - <span class="" id="recebido_contratante"></span></h1>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <h4> Cidade: <span class="" id="recebido_cidade"></span></h4>
-                </div>
-                <div class="col-md-4">
-                    <h4> Valor R$: <span class="" id="recebido_valor"></span></h4>
-                </div>
-                <div class="col-md-4">
-                    <h4> Nº recibo: <span class="" id="recebido_numero"></span></h4>
-                </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <h4> Cidade: <span class="" id="recebido_cidade"></span></h4>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <h4> Data: <span class="" id="recebido_data"></span></h4>
-                </div>
-                <div class="col-md-4">
-                    <h4> CPF ou CNPJ: <span class="" id="recebido_cpf_cnpj"></span></h4>
-                </div>
-                <div class="col-md-4">
-                    <h4> Referente à: <span class="" id="recebido_referente"></span></h4>
-                </div>
+            <div class="col-md-4">
+                <h4> Valor R$: <span class="" id="recebido_valor"></span></h4>
             </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="assinatura">
-                        Assinatura
-                    </div>
+            <div class="col-md-4">
+                <h4> Nº recibo: <span class="" id="recebido_numero"></span></h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <h4> Data: <span class="" id="recebido_data"></span></h4>
+            </div>
+            <div class="col-md-4">
+                <h4> CPF ou CNPJ: <span class="" id="recebido_cpf_cnpj"></span></h4>
+            </div>
+            <div class="col-md-4">
+                <h4> Referente à: <span class="" id="recebido_referente"></span></h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="assinatura">
+                    Assinatura
                 </div>
             </div>
         </div>
-    
+    </div>
+
     <script>
         function gerarRecibo() {
             document.getElementById('recebido_numero').innerHTML = document.getElementById('numero_recibo').value;
