--- a/index.html
+++ b/index.html
@@ -6,104 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recibo online</title>
+    <link rel="stylesheet" href="style.css">
     <style>
-        * {
-            box-sizing: border-box;
-        }
 
-        .container {
-            margin-top: 20px;
-            margin: auto;
-            width: 50%;
-            border: 1px solid #918c8c;
-            border-radius: 10px;
-            padding: 20px;
-        }
 
-        .row {
-            margin-top: 30px;
-        }
-
-        .assinatura {
-            border-top: 1px solid #000;
-            text-align: center;
-            margin-top: 30px;
-        }
-
-        .print {
-            display: none;
-        }
-
-        @media print {
-            .print {
-                display: block;
-            }
-
-            .container {
-                display: none;
-            }
-        }
-
-        .linha {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .linha2 {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .linha3 {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        input {
-            padding: 12px 20px;
-            display: inline-block;
-            border: 1px solid #ccc;
-            border-radius: 6px;
-            box-sizing: border-box;
-        }
-
-        button {
-            width: 22%;
-            background-color: #29a029;
-            color: white;
-            padding: 14px 20px;
-            margin: 8px 14px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .coluna2 {
-            width: 40%;
-            float: left;
-            padding: 15px;
-        }
-
-        .coluna1 {
-            width: 40%;
-            float: left;
-            padding: 15px;
-        }
-
-        .coluna3 {
-            width: 40%;
-            float: left;
-            padding: 15px;
-        }
-
-        input.contratante {
-            width: 400px;
-            float: left;
-
-        }
     </style>
     <!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
@@ -123,7 +29,7 @@
             </div>
             <div class="coluna3">
                 <h4>Data:</h4>
-                <input type="date" class="form-control" id="data_recibo">
+                <input type="date" class="data" id="data_recibo">
             </div>
         </div>
         <div class="linha3">
@@ -133,20 +39,18 @@
             </div>
             <div class="coluna3">
                 <h4>Cidade:</h4>
-                <input type="text" class="form-control" id="cidade">
+                <input type="text" class="cidade" id="cidade">
             </div>
         </div>
-        <div class="linha2">
-            <div class="coluna1">
-                <h4 class="cpf">CPF ou CNPJ (opcional):</h4>
-                <input type="number" class="cpf" id="cpf_cnpj">
-            </div>
-            <div class="coluna2">
-                <h4 class="referente">Referente à:</h4>
-                <input type="text" class="form-control" id="referente">
-            </div>
+        <div class="coluna1">
+            <h4 class="cpf">CPF ou CNPJ (opcional):</h4>
+            <input type="number" class="cpf" id="cpf_cnpj">
+        </div>
+        <div class="coluna2">
+            <h4 class="referente">Referente à:</h4>
+            <input type="text" class="referente" id="referente">
+        </div>
 
-        </div>
         <div class="row">
             <div class="col-md-6">
                 <button type="button" onclick="gerarRecibo()" class="btn btn-secondary">Gerar recibo</button>
