--- a/index.html
+++ b/index.html
@@ -50,13 +50,26 @@
             <h4 class="referente">Referente à:</h4>
             <input type="text" class="referente" id="referente">
         </div>
-
+        <div>
+            <div class="coluna4">
+                <h4 class="prestador_servico">Nome do prestador de serviço:</h4>
+                <input type="number" class="prestador" id="prestador_servico">
+            </div>
+            <div class="coluna4">
+                <h4 class="prestador_servico">Nome do prestador de serviço:</h4>
+                <input type="number" class="prestador" id="prestador_servico">
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-6">
                 <button type="button" onclick="gerarRecibo()" class="btn btn-secondary">Gerar recibo</button>
             </div>
         </div>
     </div>
+    <!-- DADOS PRESTADOR DE SERVIÇO -->
+
+
+
     <!-- Recibo para impressão -->
 
     <div class="print">
