--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
                 <input type="text" class="referente" id="referente">
             </div>
         </div>
-        <hr>
         <h2 class="titulo" style="margin-bottom: 30px">Dados do prestador de serviços</h2>
         <h4 class="referente" style="margin: 10px 20px">Nome do Prestador de Serviço:</h4>
         <div class="linha3">
@@ -66,6 +65,30 @@
             <div class="coluna3">
                 <h4>Cidade:</h4>
                 <input type="text" class="cidade" id="cidade">
+            </div>
+        </div>
+        <div class="linha">
+            <div class="coluna1">
+                <h4>Número: </h4>
+                <input type="number" class="form-control" id="numero">
+            </div>
+            <div class="coluna2">
+                <h4>Estado: </h4>
+                <input type="text" class="form-control" id="estado">
+            </div>
+            <div class="coluna3">
+                <h4>CEP:</h4>
+                <input type="text" class="data" id="cep">
+            </div>
+        </div>
+        <div class="linha3">
+            <div class="coluna1">
+                <h4 class="referente">Telefone(opcional):</h4>
+                <input type="text" class="contratante" id="telefone">
+            </div>
+            <div class="coluna3">
+                <h4>CPF ou CNPJ:</h4>
+                <input type="number" class="cidade" id="cpf_cnpj_prestador">
             </div>
         </div>
         <div class="linha3">
