--- a/index.html
+++ b/index.html
@@ -124,18 +124,20 @@
                 </label>
             </div>
         </div>
-        <div class="linha2" style="display: none" id="pix">
-            <div class="coluna1">
-                <h4>Quem recebeu? </h4>
-                <input type="number" class="form-control" id="numero">
-            </div>
-            <div class="coluna2">
-                <h4>Instituição/Banco: </h4>
-                <input type="text" class="form-control" id="estado">
-            </div>
-            <div class="coluna3">
-                <h4>Chave:</h4>
-                <input type="text" class="form-controlstyle="display: none"" id="cep">
+        <div class="container2" style="display: none" id="pix">
+            <div class="linha">
+                <div class="coluna1">
+                    <h4>Quem recebeu? </h4>
+                    <input type="text" class="form-control" id="numero">
+                </div>
+                <div class="coluna2">
+                    <h4>Instituição/Banco: </h4>
+                    <input type="text" class="form-control" id="estado">
+                </div>
+                <div class="coluna3">
+                    <h4>Chave:</h4>
+                    <input type="text" class="form-control" id="cep">
+                </div>
             </div>
         </div>
         <div class="linha3">
@@ -145,10 +147,7 @@
         </div>
 
     </div>
-    <!-- DADOS PRESTADOR DE SERVIÇO -->
-
-
-
+    
     <!-- Recibo para impressão -->
 
     <div class="print">
